@@ -118,8 +118,7 @@ class DatabaseOperations(BaseDatabaseOperations):
             
         # Cannot use TRUNCATE on tables that are referenced by a FOREIGN KEY; use DELETE instead.
         # (which is slow)
-        from django.db import connection
-        cursor = connection.cursor()
+        cursor = self.connection.cursor()
         # Try to minimize the risks of the braindeaded inconsistency in
         # DBCC CHEKIDENT(table, RESEED, n) behavior.
         seqs = []
@@ -246,10 +245,9 @@ class DatabaseOperations(BaseDatabaseOperations):
         Should return True if identity inserts have been enabled.
         """
         if table:
-            from django.db import connection
-            cursor = connection.cursor()
+            cursor = self.connection.cursor()
             cursor.execute('SET IDENTITY_INSERT {0} ON'.format(
-                connection.ops.quote_name(table)
+                self.connection.ops.quote_name(table)
             ))
             return True
         return False
@@ -262,10 +260,9 @@ class DatabaseOperations(BaseDatabaseOperations):
         Should return True if identity inserts have been disabled.
         """
         if table:
-            from django.db import connection
-            cursor = connection.cursor()
+            cursor = self.connection.cursor()
             cursor.execute('SET IDENTITY_INSERT {0} OFF'.format(
-                connection.ops.quote_name(table)
+                self.connection.ops.quote_name(table)
             ))
             return True
         return False
